assgn4/obj/y.output
   0  $accept : program $end

   1  $$1 :

   2  program : $$1 declList

   3  declList : decl
   4           | declList decl

   5  decl : varDecl
   6       | funDecl

   7  varDecl : typeSpecifier ID varDeclNT

   8  varDeclNT : LSQ_BRKT INTCONST RSQ_BRKT SEMICLN
   9            | SEMICLN

  10  typeSpecifier : KWD_INT
  11                | KWD_CHAR
  12                | KWD_VOID

  13  $$2 :

  14  funDecl : funcTypeName LPAREN $$2 formalDeclList RPAREN funBody

  15  $$3 :

  16  funDecl : funcTypeName LPAREN $$3 RPAREN funBody

  17  funcTypeName : typeSpecifier ID

  18  formalDeclList : formalDecl formalDeclListNT

  19  formalDeclListNT :
  20                   | COMMA formalDeclList

  21  formalDecl : typeSpecifier ID formalDeclNT

  22  formalDeclNT :
  23               | LSQ_BRKT RSQ_BRKT

  24  funBody : LCRLY_BRKT localDeclList statementList RCRLY_BRKT

  25  localDeclList :
  26                | varDecl localDeclList

  27  statementList :
  28                | statement statementList

  29  statement : compoundStmt
  30            | assignStmt
  31            | condStmt
  32            | loopStmt
  33            | returnStmt

  34  compoundStmt : LCRLY_BRKT statementList RCRLY_BRKT

  35  assignStmt : var OPER_ASGN expression SEMICLN
  36             | expression SEMICLN

  37  condStmt : KWD_IF LPAREN expression RPAREN statement condStmtNT

  38  condStmtNT :
  39             | KWD_ELSE statement

  40  loopStmt : KWD_WHILE LPAREN expression RPAREN statement

  41  returnStmt : KWD_RETURN returnStmtNT

  42  returnStmtNT : SEMICLN
  43               | expression SEMICLN

  44  var : ID varNT

  45  varNT :
  46        | LSQ_BRKT addExpr RSQ_BRKT

  47  expression : addExpr
  48             | expression relOp addExpr

  49  relOp : OPER_LTE
  50        | OPER_LT
  51        | OPER_GT
  52        | OPER_GTE
  53        | OPER_EQ
  54        | OPER_NEQ

  55  addExpr : term
  56          | addExpr addOp term

  57  addOp : OPER_ADD
  58        | OPER_SUB

  59  term : factor
  60       | term mulOp factor

  61  mulOp : OPER_MUL
  62        | OPER_DIV

  63  factor : LPAREN expression RPAREN
  64         | var
  65         | funcCallExpr
  66         | INTCONST
  67         | CHARCONST
  68         | STRCONST

  69  funcCallExpr : ID LPAREN funcCallExprNT

  70  funcCallExprNT : argList RPAREN
  71                 | RPAREN

  72  argList : expression
  73          | argList COMMA expression

state 0
	$accept : . program $end  (0)
	$$1 : .  (1)

	.  reduce 1

	program  goto 1
	$$1  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : $$1 . declList  (2)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	.  error

	declList  goto 6
	decl  goto 7
	varDecl  goto 8
	funDecl  goto 9
	typeSpecifier  goto 10
	funcTypeName  goto 11


state 3
	typeSpecifier : KWD_INT .  (10)

	.  reduce 10


state 4
	typeSpecifier : KWD_CHAR .  (11)

	.  reduce 11


state 5
	typeSpecifier : KWD_VOID .  (12)

	.  reduce 12


state 6
	program : $$1 declList .  (2)
	declList : declList . decl  (4)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	$end  reduce 2

	decl  goto 12
	varDecl  goto 8
	funDecl  goto 9
	typeSpecifier  goto 10
	funcTypeName  goto 11


state 7
	declList : decl .  (3)

	.  reduce 3


state 8
	decl : varDecl .  (5)

	.  reduce 5


state 9
	decl : funDecl .  (6)

	.  reduce 6


state 10
	varDecl : typeSpecifier . ID varDeclNT  (7)
	funcTypeName : typeSpecifier . ID  (17)

	ID  shift 13
	.  error


state 11
	funDecl : funcTypeName . LPAREN $$2 formalDeclList RPAREN funBody  (14)
	funDecl : funcTypeName . LPAREN $$3 RPAREN funBody  (16)

	LPAREN  shift 14
	.  error


state 12
	declList : declList decl .  (4)

	.  reduce 4


state 13
	varDecl : typeSpecifier ID . varDeclNT  (7)
	funcTypeName : typeSpecifier ID .  (17)

	LSQ_BRKT  shift 15
	SEMICLN  shift 16
	LPAREN  reduce 17

	varDeclNT  goto 17


state 14
	funDecl : funcTypeName LPAREN . $$2 formalDeclList RPAREN funBody  (14)
	funDecl : funcTypeName LPAREN . $$3 RPAREN funBody  (16)
	$$2 : .  (13)
	$$3 : .  (15)

	KWD_INT  reduce 13
	KWD_CHAR  reduce 13
	KWD_VOID  reduce 13
	RPAREN  reduce 15

	$$2  goto 18
	$$3  goto 19


state 15
	varDeclNT : LSQ_BRKT . INTCONST RSQ_BRKT SEMICLN  (8)

	INTCONST  shift 20
	.  error


state 16
	varDeclNT : SEMICLN .  (9)

	.  reduce 9


state 17
	varDecl : typeSpecifier ID varDeclNT .  (7)

	.  reduce 7


state 18
	funDecl : funcTypeName LPAREN $$2 . formalDeclList RPAREN funBody  (14)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	.  error

	typeSpecifier  goto 21
	formalDeclList  goto 22
	formalDecl  goto 23


state 19
	funDecl : funcTypeName LPAREN $$3 . RPAREN funBody  (16)

	RPAREN  shift 24
	.  error


state 20
	varDeclNT : LSQ_BRKT INTCONST . RSQ_BRKT SEMICLN  (8)

	RSQ_BRKT  shift 25
	.  error


state 21
	formalDecl : typeSpecifier . ID formalDeclNT  (21)

	ID  shift 26
	.  error


state 22
	funDecl : funcTypeName LPAREN $$2 formalDeclList . RPAREN funBody  (14)

	RPAREN  shift 27
	.  error


state 23
	formalDeclList : formalDecl . formalDeclListNT  (18)
	formalDeclListNT : .  (19)

	COMMA  shift 28
	RPAREN  reduce 19

	formalDeclListNT  goto 29


state 24
	funDecl : funcTypeName LPAREN $$3 RPAREN . funBody  (16)

	LCRLY_BRKT  shift 30
	.  error

	funBody  goto 31


state 25
	varDeclNT : LSQ_BRKT INTCONST RSQ_BRKT . SEMICLN  (8)

	SEMICLN  shift 32
	.  error


state 26
	formalDecl : typeSpecifier ID . formalDeclNT  (21)
	formalDeclNT : .  (22)

	LSQ_BRKT  shift 33
	RPAREN  reduce 22
	COMMA  reduce 22

	formalDeclNT  goto 34


state 27
	funDecl : funcTypeName LPAREN $$2 formalDeclList RPAREN . funBody  (14)

	LCRLY_BRKT  shift 30
	.  error

	funBody  goto 35


state 28
	formalDeclListNT : COMMA . formalDeclList  (20)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	.  error

	typeSpecifier  goto 21
	formalDeclList  goto 36
	formalDecl  goto 23


state 29
	formalDeclList : formalDecl formalDeclListNT .  (18)

	.  reduce 18


state 30
	funBody : LCRLY_BRKT . localDeclList statementList RCRLY_BRKT  (24)
	localDeclList : .  (25)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	ID  reduce 25
	INTCONST  reduce 25
	CHARCONST  reduce 25
	STRCONST  reduce 25
	KWD_IF  reduce 25
	KWD_WHILE  reduce 25
	KWD_RETURN  reduce 25
	LCRLY_BRKT  reduce 25
	RCRLY_BRKT  reduce 25
	LPAREN  reduce 25

	varDecl  goto 37
	typeSpecifier  goto 38
	localDeclList  goto 39


state 31
	funDecl : funcTypeName LPAREN $$3 RPAREN funBody .  (16)

	.  reduce 16


state 32
	varDeclNT : LSQ_BRKT INTCONST RSQ_BRKT SEMICLN .  (8)

	.  reduce 8


state 33
	formalDeclNT : LSQ_BRKT . RSQ_BRKT  (23)

	RSQ_BRKT  shift 40
	.  error


state 34
	formalDecl : typeSpecifier ID formalDeclNT .  (21)

	.  reduce 21


state 35
	funDecl : funcTypeName LPAREN $$2 formalDeclList RPAREN funBody .  (14)

	.  reduce 14


state 36
	formalDeclListNT : COMMA formalDeclList .  (20)

	.  reduce 20


state 37
	localDeclList : varDecl . localDeclList  (26)
	localDeclList : .  (25)

	KWD_INT  shift 3
	KWD_CHAR  shift 4
	KWD_VOID  shift 5
	ID  reduce 25
	INTCONST  reduce 25
	CHARCONST  reduce 25
	STRCONST  reduce 25
	KWD_IF  reduce 25
	KWD_WHILE  reduce 25
	KWD_RETURN  reduce 25
	LCRLY_BRKT  reduce 25
	RCRLY_BRKT  reduce 25
	LPAREN  reduce 25

	varDecl  goto 37
	typeSpecifier  goto 38
	localDeclList  goto 41


state 38
	varDecl : typeSpecifier . ID varDeclNT  (7)

	ID  shift 42
	.  error


state 39
	funBody : LCRLY_BRKT localDeclList . statementList RCRLY_BRKT  (24)
	statementList : .  (27)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	KWD_IF  shift 47
	KWD_WHILE  shift 48
	KWD_RETURN  shift 49
	LCRLY_BRKT  shift 50
	LPAREN  shift 51
	RCRLY_BRKT  reduce 27

	statementList  goto 52
	statement  goto 53
	compoundStmt  goto 54
	assignStmt  goto 55
	condStmt  goto 56
	loopStmt  goto 57
	returnStmt  goto 58
	var  goto 59
	expression  goto 60
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 40
	formalDeclNT : LSQ_BRKT RSQ_BRKT .  (23)

	.  reduce 23


state 41
	localDeclList : varDecl localDeclList .  (26)

	.  reduce 26


state 42
	varDecl : typeSpecifier ID . varDeclNT  (7)

	LSQ_BRKT  shift 15
	SEMICLN  shift 16
	.  error

	varDeclNT  goto 17


state 43
	var : ID . varNT  (44)
	funcCallExpr : ID . LPAREN funcCallExprNT  (69)
	varNT : .  (45)

	LSQ_BRKT  shift 65
	LPAREN  shift 66
	OPER_ADD  reduce 45
	OPER_SUB  reduce 45
	OPER_MUL  reduce 45
	OPER_DIV  reduce 45
	OPER_LT  reduce 45
	OPER_GT  reduce 45
	OPER_GTE  reduce 45
	OPER_LTE  reduce 45
	OPER_EQ  reduce 45
	OPER_NEQ  reduce 45
	OPER_ASGN  reduce 45
	RSQ_BRKT  reduce 45
	RPAREN  reduce 45
	COMMA  reduce 45
	SEMICLN  reduce 45

	varNT  goto 67


state 44
	factor : INTCONST .  (66)

	.  reduce 66


state 45
	factor : CHARCONST .  (67)

	.  reduce 67


state 46
	factor : STRCONST .  (68)

	.  reduce 68


state 47
	condStmt : KWD_IF . LPAREN expression RPAREN statement condStmtNT  (37)

	LPAREN  shift 68
	.  error


state 48
	loopStmt : KWD_WHILE . LPAREN expression RPAREN statement  (40)

	LPAREN  shift 69
	.  error


state 49
	returnStmt : KWD_RETURN . returnStmtNT  (41)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	SEMICLN  shift 70
	.  error

	returnStmtNT  goto 71
	var  goto 72
	expression  goto 73
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 50
	compoundStmt : LCRLY_BRKT . statementList RCRLY_BRKT  (34)
	statementList : .  (27)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	KWD_IF  shift 47
	KWD_WHILE  shift 48
	KWD_RETURN  shift 49
	LCRLY_BRKT  shift 50
	LPAREN  shift 51
	RCRLY_BRKT  reduce 27

	statementList  goto 74
	statement  goto 53
	compoundStmt  goto 54
	assignStmt  goto 55
	condStmt  goto 56
	loopStmt  goto 57
	returnStmt  goto 58
	var  goto 59
	expression  goto 60
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 51
	factor : LPAREN . expression RPAREN  (63)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	expression  goto 75
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 52
	funBody : LCRLY_BRKT localDeclList statementList . RCRLY_BRKT  (24)

	RCRLY_BRKT  shift 76
	.  error


state 53
	statementList : statement . statementList  (28)
	statementList : .  (27)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	KWD_IF  shift 47
	KWD_WHILE  shift 48
	KWD_RETURN  shift 49
	LCRLY_BRKT  shift 50
	LPAREN  shift 51
	RCRLY_BRKT  reduce 27

	statementList  goto 77
	statement  goto 53
	compoundStmt  goto 54
	assignStmt  goto 55
	condStmt  goto 56
	loopStmt  goto 57
	returnStmt  goto 58
	var  goto 59
	expression  goto 60
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 54
	statement : compoundStmt .  (29)

	.  reduce 29


state 55
	statement : assignStmt .  (30)

	.  reduce 30


state 56
	statement : condStmt .  (31)

	.  reduce 31


state 57
	statement : loopStmt .  (32)

	.  reduce 32


state 58
	statement : returnStmt .  (33)

	.  reduce 33


state 59
	assignStmt : var . OPER_ASGN expression SEMICLN  (35)
	factor : var .  (64)

	OPER_ASGN  shift 78
	OPER_ADD  reduce 64
	OPER_SUB  reduce 64
	OPER_MUL  reduce 64
	OPER_DIV  reduce 64
	OPER_LT  reduce 64
	OPER_GT  reduce 64
	OPER_GTE  reduce 64
	OPER_LTE  reduce 64
	OPER_EQ  reduce 64
	OPER_NEQ  reduce 64
	SEMICLN  reduce 64


state 60
	assignStmt : expression . SEMICLN  (36)
	expression : expression . relOp addExpr  (48)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	SEMICLN  shift 85
	.  error

	relOp  goto 86


state 61
	expression : addExpr .  (47)
	addExpr : addExpr . addOp term  (56)

	OPER_ADD  shift 87
	OPER_SUB  shift 88
	OPER_LT  reduce 47
	OPER_GT  reduce 47
	OPER_GTE  reduce 47
	OPER_LTE  reduce 47
	OPER_EQ  reduce 47
	OPER_NEQ  reduce 47
	RPAREN  reduce 47
	COMMA  reduce 47
	SEMICLN  reduce 47

	addOp  goto 89


state 62
	addExpr : term .  (55)
	term : term . mulOp factor  (60)

	OPER_MUL  shift 90
	OPER_DIV  shift 91
	OPER_ADD  reduce 55
	OPER_SUB  reduce 55
	OPER_LT  reduce 55
	OPER_GT  reduce 55
	OPER_GTE  reduce 55
	OPER_LTE  reduce 55
	OPER_EQ  reduce 55
	OPER_NEQ  reduce 55
	RSQ_BRKT  reduce 55
	RPAREN  reduce 55
	COMMA  reduce 55
	SEMICLN  reduce 55

	mulOp  goto 92


state 63
	term : factor .  (59)

	.  reduce 59


state 64
	factor : funcCallExpr .  (65)

	.  reduce 65


state 65
	varNT : LSQ_BRKT . addExpr RSQ_BRKT  (46)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	addExpr  goto 93
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 66
	funcCallExpr : ID LPAREN . funcCallExprNT  (69)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	RPAREN  shift 94
	.  error

	var  goto 72
	expression  goto 95
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64
	funcCallExprNT  goto 96
	argList  goto 97


state 67
	var : ID varNT .  (44)

	.  reduce 44


state 68
	condStmt : KWD_IF LPAREN . expression RPAREN statement condStmtNT  (37)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	expression  goto 98
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 69
	loopStmt : KWD_WHILE LPAREN . expression RPAREN statement  (40)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	expression  goto 99
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 70
	returnStmtNT : SEMICLN .  (42)

	.  reduce 42


state 71
	returnStmt : KWD_RETURN returnStmtNT .  (41)

	.  reduce 41


state 72
	factor : var .  (64)

	.  reduce 64


state 73
	returnStmtNT : expression . SEMICLN  (43)
	expression : expression . relOp addExpr  (48)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	SEMICLN  shift 100
	.  error

	relOp  goto 86


state 74
	compoundStmt : LCRLY_BRKT statementList . RCRLY_BRKT  (34)

	RCRLY_BRKT  shift 101
	.  error


state 75
	expression : expression . relOp addExpr  (48)
	factor : LPAREN expression . RPAREN  (63)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	RPAREN  shift 102
	.  error

	relOp  goto 86


state 76
	funBody : LCRLY_BRKT localDeclList statementList RCRLY_BRKT .  (24)

	.  reduce 24


state 77
	statementList : statement statementList .  (28)

	.  reduce 28


state 78
	assignStmt : var OPER_ASGN . expression SEMICLN  (35)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	expression  goto 103
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 79
	relOp : OPER_LT .  (50)

	.  reduce 50


state 80
	relOp : OPER_GT .  (51)

	.  reduce 51


state 81
	relOp : OPER_GTE .  (52)

	.  reduce 52


state 82
	relOp : OPER_LTE .  (49)

	.  reduce 49


state 83
	relOp : OPER_EQ .  (53)

	.  reduce 53


state 84
	relOp : OPER_NEQ .  (54)

	.  reduce 54


state 85
	assignStmt : expression SEMICLN .  (36)

	.  reduce 36


state 86
	expression : expression relOp . addExpr  (48)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	addExpr  goto 104
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 87
	addOp : OPER_ADD .  (57)

	.  reduce 57


state 88
	addOp : OPER_SUB .  (58)

	.  reduce 58


state 89
	addExpr : addExpr addOp . term  (56)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	term  goto 105
	factor  goto 63
	funcCallExpr  goto 64


state 90
	mulOp : OPER_MUL .  (61)

	.  reduce 61


state 91
	mulOp : OPER_DIV .  (62)

	.  reduce 62


state 92
	term : term mulOp . factor  (60)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	factor  goto 106
	funcCallExpr  goto 64


state 93
	varNT : LSQ_BRKT addExpr . RSQ_BRKT  (46)
	addExpr : addExpr . addOp term  (56)

	OPER_ADD  shift 87
	OPER_SUB  shift 88
	RSQ_BRKT  shift 107
	.  error

	addOp  goto 89


state 94
	funcCallExprNT : RPAREN .  (71)

	.  reduce 71


state 95
	expression : expression . relOp addExpr  (48)
	argList : expression .  (72)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	RPAREN  reduce 72
	COMMA  reduce 72

	relOp  goto 86


state 96
	funcCallExpr : ID LPAREN funcCallExprNT .  (69)

	.  reduce 69


state 97
	funcCallExprNT : argList . RPAREN  (70)
	argList : argList . COMMA expression  (73)

	RPAREN  shift 108
	COMMA  shift 109
	.  error


state 98
	condStmt : KWD_IF LPAREN expression . RPAREN statement condStmtNT  (37)
	expression : expression . relOp addExpr  (48)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	RPAREN  shift 110
	.  error

	relOp  goto 86


state 99
	loopStmt : KWD_WHILE LPAREN expression . RPAREN statement  (40)
	expression : expression . relOp addExpr  (48)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	RPAREN  shift 111
	.  error

	relOp  goto 86


state 100
	returnStmtNT : expression SEMICLN .  (43)

	.  reduce 43


state 101
	compoundStmt : LCRLY_BRKT statementList RCRLY_BRKT .  (34)

	.  reduce 34


state 102
	factor : LPAREN expression RPAREN .  (63)

	.  reduce 63


state 103
	assignStmt : var OPER_ASGN expression . SEMICLN  (35)
	expression : expression . relOp addExpr  (48)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	SEMICLN  shift 112
	.  error

	relOp  goto 86


state 104
	expression : expression relOp addExpr .  (48)
	addExpr : addExpr . addOp term  (56)

	OPER_ADD  shift 87
	OPER_SUB  shift 88
	OPER_LT  reduce 48
	OPER_GT  reduce 48
	OPER_GTE  reduce 48
	OPER_LTE  reduce 48
	OPER_EQ  reduce 48
	OPER_NEQ  reduce 48
	RPAREN  reduce 48
	COMMA  reduce 48
	SEMICLN  reduce 48

	addOp  goto 89


state 105
	addExpr : addExpr addOp term .  (56)
	term : term . mulOp factor  (60)

	OPER_MUL  shift 90
	OPER_DIV  shift 91
	OPER_ADD  reduce 56
	OPER_SUB  reduce 56
	OPER_LT  reduce 56
	OPER_GT  reduce 56
	OPER_GTE  reduce 56
	OPER_LTE  reduce 56
	OPER_EQ  reduce 56
	OPER_NEQ  reduce 56
	RSQ_BRKT  reduce 56
	RPAREN  reduce 56
	COMMA  reduce 56
	SEMICLN  reduce 56

	mulOp  goto 92


state 106
	term : term mulOp factor .  (60)

	.  reduce 60


state 107
	varNT : LSQ_BRKT addExpr RSQ_BRKT .  (46)

	.  reduce 46


state 108
	funcCallExprNT : argList RPAREN .  (70)

	.  reduce 70


state 109
	argList : argList COMMA . expression  (73)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	LPAREN  shift 51
	.  error

	var  goto 72
	expression  goto 113
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 110
	condStmt : KWD_IF LPAREN expression RPAREN . statement condStmtNT  (37)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	KWD_IF  shift 47
	KWD_WHILE  shift 48
	KWD_RETURN  shift 49
	LCRLY_BRKT  shift 50
	LPAREN  shift 51
	.  error

	statement  goto 114
	compoundStmt  goto 54
	assignStmt  goto 55
	condStmt  goto 56
	loopStmt  goto 57
	returnStmt  goto 58
	var  goto 59
	expression  goto 60
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 111
	loopStmt : KWD_WHILE LPAREN expression RPAREN . statement  (40)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	KWD_IF  shift 47
	KWD_WHILE  shift 48
	KWD_RETURN  shift 49
	LCRLY_BRKT  shift 50
	LPAREN  shift 51
	.  error

	statement  goto 115
	compoundStmt  goto 54
	assignStmt  goto 55
	condStmt  goto 56
	loopStmt  goto 57
	returnStmt  goto 58
	var  goto 59
	expression  goto 60
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 112
	assignStmt : var OPER_ASGN expression SEMICLN .  (35)

	.  reduce 35


state 113
	expression : expression . relOp addExpr  (48)
	argList : argList COMMA expression .  (73)

	OPER_LT  shift 79
	OPER_GT  shift 80
	OPER_GTE  shift 81
	OPER_LTE  shift 82
	OPER_EQ  shift 83
	OPER_NEQ  shift 84
	RPAREN  reduce 73
	COMMA  reduce 73

	relOp  goto 86


114: shift/reduce conflict (shift 116, reduce 38) on KWD_ELSE
state 114
	condStmt : KWD_IF LPAREN expression RPAREN statement . condStmtNT  (37)
	condStmtNT : .  (38)

	KWD_ELSE  shift 116
	ID  reduce 38
	INTCONST  reduce 38
	CHARCONST  reduce 38
	STRCONST  reduce 38
	KWD_IF  reduce 38
	KWD_WHILE  reduce 38
	KWD_RETURN  reduce 38
	LCRLY_BRKT  reduce 38
	RCRLY_BRKT  reduce 38
	LPAREN  reduce 38

	condStmtNT  goto 117


state 115
	loopStmt : KWD_WHILE LPAREN expression RPAREN statement .  (40)

	.  reduce 40


state 116
	condStmtNT : KWD_ELSE . statement  (39)

	ID  shift 43
	INTCONST  shift 44
	CHARCONST  shift 45
	STRCONST  shift 46
	KWD_IF  shift 47
	KWD_WHILE  shift 48
	KWD_RETURN  shift 49
	LCRLY_BRKT  shift 50
	LPAREN  shift 51
	.  error

	statement  goto 118
	compoundStmt  goto 54
	assignStmt  goto 55
	condStmt  goto 56
	loopStmt  goto 57
	returnStmt  goto 58
	var  goto 59
	expression  goto 60
	addExpr  goto 61
	term  goto 62
	factor  goto 63
	funcCallExpr  goto 64


state 117
	condStmt : KWD_IF LPAREN expression RPAREN statement condStmtNT .  (37)

	.  reduce 37


state 118
	condStmtNT : KWD_ELSE statement .  (39)

	.  reduce 39


State 114 contains 1 shift/reduce conflict.


43 terminals, 39 nonterminals
74 grammar rules, 119 states
